Prevent scroll bars appearing on Firefox

--- a/www/assets/css/deep-zoom.css
+++ b/www/assets/css/deep-zoom.css
@@ -85,7 +85,9 @@
 	.infobox__content {
 		background: #fff;
 		border: 1px solid #666;
-		overflow: scroll;
+		overflow: auto;
+		overflow-x: hidden;
+		overflow-y: auto;
 		margin-left: auto;
 		margin-right: auto;
 		max-width: 610px;
